# variable-switching

./: .gitignore  PLAN.md  README.md  build.bat  dev-server.js  dev.bat  package-lock.json  package.json
.claude/: UI.md  claude.md
.github/workflows/: build.yml
docs/plans/: 2026-03-01-editor-detection-and-path-overrides.md  2026-03-01-usage-help-and-release-updater.md
public/: app-helpers.js  app.js  app.test.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json  varswitch-profiles.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
