[package]
name = "varswitch"
version = "1.0.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[build-dependencies]
tauri-build = { version = "2", features = [] }
